--- a/startpage/package.json
+++ b/startpage/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.1.1",
     "bootstrap-material-design": "4.1.1",
-    "vue": "^2.5.16"
+    "bootstrap-vue": "^2.0.0-rc.9",
+    "classnames": "^2.2.5",
+    "font-awesome": "^4.7.0",
+    "mdbootstrap": "^4.5.2",
+    "vue": "^2.5.16",
+    "vue-material": "^1.0.0-beta-10.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.10",
