--- a/startpage/package.json
+++ b/startpage/package.json
@@ -21,7 +21,9 @@
     "@vue/cli-plugin-babel": "^3.0.0-beta.10",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.10",
     "@vue/cli-service": "^3.0.0-beta.10",
-    "vue-template-compiler": "^2.5.13"
+    "vue-template-compiler": "^2.5.13",
+    "webpack": "^4.8.3",
+    "webpack-dev-server": "^3.1.4"
   },
   "babel": {
     "presets": [
