--- a/startpage/package.json
+++ b/startpage/package.json
@@ -16,7 +16,8 @@
     "font-awesome": "^4.7.0",
     "mdbootstrap": "^4.5.2",
     "vue": "^2.5.16",
-    "vue-material": "^1.0.0-beta-10.2"
+    "vue-material": "^1.0.0-beta-10.2",
+    "vue-material-design-icons": "^1.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.10",
