Installed font-awesome to get the icons.  Applied the logics for the imageUrl and icons.

--- a/startpage/package.json
+++ b/startpage/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/vue-fontawesome": "^0.0.22",
     "bootstrap": "^4.1.1",
     "bootstrap-material-design": "4.1.1",
     "bootstrap-vue": "^2.0.0-rc.9",
@@ -17,6 +19,7 @@
     "mdbootstrap": "^4.5.2",
     "style-loader": "^0.21.0",
     "vue": "^2.5.16",
+    "vue-awesome": "^3.0.0",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-material-design-icons": "^1.4.0",
     "vue2-animate": "^2.0.0"
