--- a/startpage/package.json
+++ b/startpage/package.json
@@ -19,6 +19,8 @@
     "vue": "^2.5.16",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-material-design-icons": "^1.4.0",
+    "vue-material-design-icons-plugin": "^1.0.0",
+    "vue-spinner": "^1.0.3",
     "vue2-animate": "^2.0.0"
   },
   "devDependencies": {
